Micro tab: Added type parameters to OpenSite
# 0.00.63 (54143) Jul 15, 2011
Micro tab: Added calcium chloride lattice
# 0.00.62 (54111) Jul 15, 2011
Micro tab: Nitrate group remains together when sodium nitrate dissolves
Micro tab: Fixed the angle and distances for oxygen in sodium nitrate NO3 group
Micro tab: Simplified micro shaker model and started adding sodium nitrate
# 0.00.61 (54021) Jul 12, 2011
Micro tab: Fixed: Sucrose molecules don't have the right size
Micro tab: Removed soluble salts model and replaced with new implementation
Micro tab: Added random walks for particles
# 0.00.60 (53874) Jul 8, 2011
Micro tab: Increased the size of the insets around the periodic table
Micro tab: Rewriting model (in progress)
Micro tab: Added beaker labels and tick marks
# 0.00.59 (53687) Jul 2, 2011
Micro tab: Periodic table should hide/restore when switching tabs
Micro tab: Improved highlighting in periodic table
Micro tab: Fixed: some nodes (Oxygen in sodium nitrate in sugar-and-salt solutions) get clipped
Micro tab: Synchronize periodic table with the selected solute
Micro tab: Added periodic table
Water tab: Listen for when the user changes tabs so the JMolDialog can be hidden when switching away and shown when switching to this tab (if it was already shown)
Water tab: Fixed: When clicking into the play area, 3d sucrose shouldn't disappear
Micro tab: Improved the combo box for solute selection
# 0.00.58 (53588) Jun 29, 2011
Switched to use combo box example as main for temporary testing
All tabs: Added model.txt
All tabs: Internationalized reset all button
All tabs: Improved colors against white background
All tabs: Added option for white background
# 0.00.57 (53534) Jun 27, 2011
Water tab: Made the mini beaker graphic half as big, reduced thickness of its walls and removed liter ticks and labels
Water tab: Close the 3D sugar view if the user clicks anywhere else
Macro tab: Moved the short circuit message in front of salt/sugar dispensers