@@ -380,4 +380,25 @@ public class MicroModel extends SugarAndSaltSolutionModel implements ISugarAndSa
     @Override protected String getSugarDispenserName() {
         return SUCROSE;
     }
+
+    //Called when water flows out of the output faucet, so that we can move update the particles accordingly
+    @Override protected void waterDrained( double outVolume, double initialSaltConcentration, double initialSugarConcentration ) {
+        super.waterDrained( outVolume, initialSaltConcentration, initialSugarConcentration );
+
+        double changeInWaterHeight = beaker.getHeightForVolume( outVolume ) - beaker.getHeightForVolume( 0 );
+
+        waterDrained( freeParticles, changeInWaterHeight );
+        waterDrained( sugarCrystals, changeInWaterHeight );
+        waterDrained( nitrates, changeInWaterHeight );
+    }
+
+    //When water drains out, move the particles down with the water level.
+    //Beaker base is at y=0.  Move particles proportionately to how close they are to the top.
+    private void waterDrained( ItemList<? extends Particle> particles, double changeInWaterHeight ) {
+        for ( Particle particle : particles ) {
+            double yLocationInBeaker = particle.position.get().getY();
+            double fractionToTop = yLocationInBeaker / beaker.getHeightForVolume( waterVolume.get() );
+            particle.position.set( particle.position.get().minus( 0, changeInWaterHeight * fractionToTop ) );
+        }
+    }
 }
